# ai-app

./: .gitignore  KnowledgeBase2.ipynb  RAG.ipynb  README.md  chainlit.md  cl_app.py  delete_me.py  duckdb.ipynb  index.html  main.py  pyproject.toml
api/routes/: status.py  v1_router.py
geo/assistants/: geocode.py  near.py  reviewer.py  route.py
geo/models/: geocode.py  near.py  route.py
geo/teams/: geo.py
geo/tools/: geocode.py  near.py  route.py
public/: favicon
